--- a/NeverHaveIEver/Views/Custom/NeverHaveIEverCardView.xib
+++ b/NeverHaveIEver/Views/Custom/NeverHaveIEverCardView.xib
@@ -12,9 +12,15 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NeverHaveIEverCardView" customModule="NeverHaveIEver" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="PoY-YV-Ok3" id="hzw-0X-5j3"/>
+                <outlet property="infoLabel" destination="xgs-kA-US9" id="75c-os-iSk"/>
+                <outlet property="nextButton" destination="5Eh-G4-F4f" id="PHq-vB-CbJ"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="NeverHaveIEverCardView" customModule="NeverHaveIEver" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="435" height="455"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -100,11 +106,6 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="contentView" destination="PoY-YV-Ok3" id="9Sd-2G-PPu"/>
-                <outlet property="infoLabel" destination="xgs-kA-US9" id="9hb-YB-RcI"/>
-                <outlet property="nextButton" destination="5Eh-G4-F4f" id="zfN-ur-xux"/>
-            </connections>
             <point key="canvasLocation" x="152.89855072463769" y="289.62053571428572"/>
         </view>
     </objects>
