--- a/NeverHaveIEver/Base.lproj/Main.storyboard
+++ b/NeverHaveIEver/Base.lproj/Main.storyboard
@@ -390,6 +390,72 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="diagonalMode" value="NO"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KSU-6o-yBq" customClass="CardView" customModule="NeverHaveIEver" customModuleProvider="target">
+                                <rect key="frame" x="57" y="303" width="300" height="290"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k1l-MR-HuD" customClass="ActionButton" customModule="NeverHaveIEver" customModuleProvider="target">
+                                        <rect key="frame" x="55" y="195" width="190" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="ADq-ZQ-Hhl"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <state key="normal" title="RELOAD">
+                                            <color key="titleColor" red="0.95628672839999995" green="0.95558923480000002" blue="0.97365838289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                                <color key="value" red="0.78343755010000005" green="0.23117372389999999" blue="0.98947042230000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                                <color key="value" red="0.92652004960000001" green="0.24152708049999999" blue="0.71551316980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="21"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                <real key="value" value="0.29999999999999999"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                <size key="value" width="0.29999999999999999" height="0.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="reloadCards:" destination="1ge-43-HKW" eventType="touchUpInside" id="PdM-Gx-8JP"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are out of Questions!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytH-UO-j3D">
+                                        <rect key="frame" x="6" y="48" width="288" height="78"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="78" id="61o-W0-P88"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="ytH-UO-j3D" firstAttribute="top" secondItem="KSU-6o-yBq" secondAttribute="top" constant="48" id="6CW-t0-u4b"/>
+                                    <constraint firstAttribute="bottom" secondItem="k1l-MR-HuD" secondAttribute="bottom" constant="50" id="7JZ-qb-aYU"/>
+                                    <constraint firstAttribute="trailing" secondItem="ytH-UO-j3D" secondAttribute="trailing" constant="6" id="DV8-zY-U16"/>
+                                    <constraint firstItem="k1l-MR-HuD" firstAttribute="leading" secondItem="KSU-6o-yBq" secondAttribute="leading" constant="55" id="Nd1-F2-zm3"/>
+                                    <constraint firstAttribute="height" constant="290" id="VMU-fb-Fbe"/>
+                                    <constraint firstAttribute="trailing" secondItem="k1l-MR-HuD" secondAttribute="trailing" constant="55" id="edJ-wK-1l2"/>
+                                    <constraint firstItem="ytH-UO-j3D" firstAttribute="leading" secondItem="KSU-6o-yBq" secondAttribute="leading" constant="6" id="t9c-qw-EQU"/>
+                                    <constraint firstAttribute="width" constant="300" id="t9i-EL-mYX"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="14"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="2" height="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69O-Ia-a3c">
                                 <rect key="frame" x="16" y="60" width="30" height="30"/>
                                 <constraints>
@@ -406,6 +472,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="ipi-1u-EYd" firstAttribute="top" secondItem="ZfF-aD-1WU" secondAttribute="top" id="BMb-pc-bOt"/>
+                            <constraint firstItem="KSU-6o-yBq" firstAttribute="centerY" secondItem="ipi-1u-EYd" secondAttribute="centerY" id="BfZ-mO-6xg"/>
+                            <constraint firstItem="KSU-6o-yBq" firstAttribute="centerX" secondItem="ipi-1u-EYd" secondAttribute="centerX" id="DMm-yg-FJ7"/>
                             <constraint firstItem="69O-Ia-a3c" firstAttribute="leading" secondItem="ISw-XT-CJe" secondAttribute="leading" constant="16" id="L61-HW-HXd"/>
                             <constraint firstItem="69O-Ia-a3c" firstAttribute="top" secondItem="ISw-XT-CJe" secondAttribute="top" constant="16" id="ODn-mV-RSE"/>
                             <constraint firstItem="ipi-1u-EYd" firstAttribute="leading" secondItem="ISw-XT-CJe" secondAttribute="leading" id="RXa-4U-fki"/>
@@ -418,6 +486,7 @@
                     <connections>
                         <outlet property="containerView" destination="FK5-Qx-74m" id="qsc-9m-x8D"/>
                         <outlet property="menuIcon" destination="69O-Ia-a3c" id="bSu-kH-QKB"/>
+                        <outlet property="reloadCard" destination="KSU-6o-yBq" id="rND-L4-tEl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7i-sa-x9D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
